<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#197A9E"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="*비밀번호는 6자 이상 16자 이하로 가능합니다"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@android:color/white"
        android:onClick="registerClick"
        android:padding="18dp"
        android:text="@string/sign_up_now"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>