<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#197A9E"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/signing_in"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/txt_userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:scrollHorizontally="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@android:color/white"
        android:onClick="signInClick"
        android:padding="18dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member_yet"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="signUpClick"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/sign_up_now"
            android:textColor="#ff0"
            android:textSize="17sp"
            android:textStyle="italic" />
    </LinearLayout>


</LinearLayout>