<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationsSettingActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="setHomeClick"
                android:padding="15dp"
                android:text="@string/set_home_location"
                android:textSize="@dimen/question_txt_size"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="setDormClick"
                android:padding="15dp"
                android:text="@string/set_dorm_location"
                android:textSize="@dimen/question_txt_size"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="setUnivClick"
                android:padding="15dp"
                android:text="@string/set_university_location"
                android:textSize="@dimen/question_txt_size"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="setLibraryClick"
                android:padding="15dp"
                android:text="@string/set_library_location"
                android:textSize="@dimen/question_txt_size"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="setAdditionalPlaceClick"
                android:padding="15dp"
                android:text="@string/set_additional_location"
                android:textSize="@dimen/question_txt_size"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="지도에서 원하는 위치에 핀을 놓으신 후 해당 장소 버튼을 눌러 장소를 설정하십시오."
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/question_txt_size"
        android:textStyle="bold" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
